Updated recipe page

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,53 @@
 <h1>Lasagna</h1>
+<img src="../images/lasagna.jpg" alt="Image Of Lasagna">
+<h2>Description</h2>
+<p>
+    Indulge your taste buds with the comforting layers of our Classic Homemade Lasagna. 
+    This timeless Italian dish is a symphony of rich flavors, combining perfectly seasoned ground beef, 
+    velvety ricotta cheese, and savory marinara sauce, all nestled between layers of tender pasta sheets. 
+    Each bite is a journey through textures and tastes, as the lasagna bakes to golden perfection, creating a harmonious blend of cheesy goodness and robust tomato flavors.
+</p>
+<h2>Ingredients</h2>
+<h3>For the Meat Sauce:</h3>
+<ul>
+    <li>1 pound (450g) ground beef</li>
+    <li>1 onion, finely chopped</li>
+    <li>3 cloves garlic, minced</li>
+    <li>1 can (28 ounces/800g) crushed tomatoes</li>
+    <li>1 can (15 ounces/425g) tomato sauce</li>
+    <li>1 can (6 ounces/170g) tomato paste</li>
+    <li>1/2 cup (120ml) red wine (optional)</li>
+    <li>2 teaspoons dried oregano</li>
+    <li>2 teaspoons dried basil</li>
+    <li>1 teaspoon sugar</li>
+    <li>Salt and pepper to taste</li>
+</ul>
+<h3>For the Cheese Mixture:</h3>
+<ul>
+    <li>2 cups (475g) ricotta cheese</li>
+    <li>1 large egg</li>
+    <li>1/4 cup (60g) grated Parmesan cheese</li>
+    <li>2 tablespoons fresh parsley, chopped</li>
+    <li>Salt and pepper to taste</li>
+</ul>
+<h3>Other Ingredients:</h3>
+<ul>
+    <li>9 lasagna noodles, cooked al dente according to package instructions</li>
+    <li>3 cups (about 340g) shredded mozzarella cheese</li>
+    <li>1/2 cup (60g) grated Parmesan cheese</li>
+</ul>
+<h3>Optional Garnish:</h3>
+<ul>
+    <li>Fresh basil or parsley for garnish</li>
+</ul>
+<h2>Instructions</h2>
+<ol>
+    <li>In a large skillet, brown the ground beef over medium heat. Add chopped onions and garlic, and cook until onions are translucent.</li>
+    <li>Stir in crushed tomatoes, tomato sauce, tomato paste, red wine (if using), oregano, basil, sugar, salt, and pepper. Simmer for about 20-30 minutes, allowing the flavors to meld.</li>
+    <li>In a bowl, mix together the ricotta cheese, egg, grated Parmesan, chopped parsley, salt, and pepper.</li>
+    <li>Preheat the oven to 375°F (190°C).</li>
+    <li>In a 9x13-inch (23x33cm) baking dish, spread a thin layer of the meat sauce. Place three cooked lasagna noodles on top.</li>
+    <li>Spread a portion of the ricotta mixture over the noodles, followed by a layer of shredded mozzarella. Repeat these layers until all ingredients are used, finishing with a layer of meat sauce and a generous topping of shredded mozzarella and grated Parmesan.</li>
+    <li>Cover the baking dish with foil and bake for 25 minutes. Remove the foil and bake for an additional 15-20 minutes or until the cheese is bubbly and golden.</li>
+    <li>Allow the lasagna to rest for about 10 minutes before slicing. Garnish with fresh basil or parsley if desired.</li>
+</ol>
